--- a/tab.html
+++ b/tab.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div id="logo">TÂB</div>
+    <div id="sidePanel-trigger"></div>
+    <div id="sidePanel">
+        <p> side panel lol</p>
+    </div>
     <div id="configurations">
         <label for="board-size">Board Size:</label>
         <select id="board-size">
