--- a/tab.html
+++ b/tab.html
@@ -73,11 +73,7 @@
     <div id="scoreboard-panel">
     <div class="scoreboard-container">
         <button id="close-scoreboard" class="close-btn">×</button>
-        <div id="leaderboard-tabs">
-            <button class="leaderboard-tab active" data-tab="local">Local</button>
-            <button class="leaderboard-tab" data-tab="national">National</button>
-            <button class="leaderboard-tab" data-tab="worldwide">Worldwide</button>
-        </div>
+        <h2 id="scoreboard-title">ScoreBoard</h2>
 
         <div id="leaderboard-content">
             <div class="leaderboard-panel" id="leaderboard-local">
@@ -85,33 +81,11 @@
                     <thead>
                         <tr><th>Rank</th><th>Name</th><th>Wins</th><th>Losses</th><th>Win/Loss Ratio</th></tr>
                     </thead>
-                    <tbody>
-                        <tr><td>1</td><td>You</td><td>10</td><td>2</td><td>5.00</td></tr>
-                        <tr><td>2</td><td>Player2</td><td>8</td><td>4</td><td>2.00</td></tr>
+                    <tbody id="scoreboard-body">
+                        <!-- vazio até o primeiro jogo -->
                     </tbody>
                 </table>
-            </div>
-            <div class="leaderboard-panel" id="leaderboard-national" style="display:none;">
-                <table>
-                    <thead>
-                        <tr><th>Rank</th><th>Name</th><th>Wins</th><th>Losses</th><th>Win/Loss Ratio</th></tr>
-                    </thead>
-                    <tbody>
-                        <tr><td>1</td><td>NatPlayer1</td><td>25</td><td>5</td><td>5.00</td></tr>
-                        <tr><td>2</td><td>NatPlayer2</td><td>20</td><td>10</td><td>2.00</td></tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="leaderboard-panel" id="leaderboard-worldwide" style="display:none;">
-                <table>
-                    <thead>
-                        <tr><th>Rank</th><th>Name</th><th>Wins</th><th>Losses</th><th>Win/Loss Ratio</th></tr>
-                    </thead>
-                    <tbody>
-                        <tr><td>1</td><td>WorldPlayer1</td><td>100</td><td>10</td><td>10.00</td></tr>
-                        <tr><td>2</td><td>WorldPlayer2</td><td>80</td><td>20</td><td>4.00</td></tr>
-                    </tbody>
-                </table>
+                <p id="no-scores-msg">No games played yet.</p>
             </div>
         </div>
     </div>
