--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
     <div id="scoreboard-panel">
         <div class="scoreboard-container">
-            <h2 id="scoreboard-title">Offline ScoreBoard</h2>
+            <h2 id="scoreboard-title-offline">Offline ScoreBoard</h2>
 
             <div id="leaderboard-content">
                 <div class="leaderboard-panel" id="leaderboard-local">
@@ -271,9 +271,8 @@
                         </thead>
                         <tbody id="scoreboard-body">
                         </tbody>
-                    </table>
-                </br>                    
-                <h2 id="scoreboard-title">Online ScoreBoard</h2>
+                    </table>           
+                <h2 id="scoreboard-title-online">Online ScoreBoard</h2>
                 </div>
             </div>
         </div>
